Fix HTML encoding issues in student-login.html

--- a/student-login.html
+++ b/student-login.html
@@ -207,7 +207,7 @@
   <div class="background"></div>
   <div class="box" id="loginBox">
     <img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRael_4f3Iv0L-t9WvqLQ8XBoMMa6m-L82gjg&s" alt="University of Nottingham Logo">
-    <h2 id="form-title">Student Login</h2>
+    <h2 id="form-title">User Login</h2>
     <div id="loginForm">
       <label for="email">Email</label>
       <input type="email" id="email" placeholder="Enter your email" />
@@ -383,3 +383,4 @@
   </script>
 </body>
 </html>
+
