--- a/order-history.html
+++ b/order-history.html
@@ -91,6 +91,24 @@
       font-size: 0.98em;
       color: #444;
     }
+    .order-again-btn {
+      margin-top: 14px;
+      padding: 8px 18px;
+      border-radius: 8px;
+      border: none;
+      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      font-size: 1em;
+      transition: background 0.2s, transform 0.2s;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+      letter-spacing: 0.4px;
+    }
+    .order-again-btn:hover {
+      background: linear-gradient(90deg, #00aaff 60%, #005f73 100%);
+      transform: scale(1.03);
+    }
     .no-orders {
       text-align: center;
       color: #888;
@@ -141,6 +159,14 @@
     const userEmail = localStorage.getItem("email");
     const historyContainer = document.getElementById("history-container");
 
+    function orderAgain(orderData) {
+      // Save items, vendorId, note to localStorage and redirect to summary.html
+      localStorage.setItem("cart", JSON.stringify(orderData.items || []));
+      localStorage.setItem("vendorId", orderData.vendorId || "");
+      localStorage.setItem("orderNote", orderData.note || "");
+      window.location.href = "summary.html";
+    }
+
     if (!userEmail) {
       historyContainer.innerHTML = `<div class="no-orders">No user found. Please log in.</div>`;
     } else {
@@ -190,6 +216,7 @@
               `).join("")}
             </ul>
             <div class="order-note"><strong>Note:</strong> ${data.note || "No note provided."}</div>
+            <button class="order-again-btn">Order Again</button>
           `;
 
           // Only make clickable if not blurred (not "taken" or is most recent)
@@ -202,6 +229,12 @@
             card.title = "Click to view order status";
             card.style.cursor = "pointer";
           }
+
+          // Order Again button
+          card.querySelector(".order-again-btn").onclick = (e) => {
+            e.stopPropagation();
+            orderAgain(data);
+          };
 
           historyContainer.appendChild(card);
         });
