Fix HTML encoding issues in order-status.html

--- a/order-status.html
+++ b/order-status.html
@@ -169,7 +169,7 @@
           Notification.requestPermission().then(permission => {
             if (permission === "granted") {
               messaging.getToken({
-                vapidKey: "BK8WocQC93HpCQb9ysqai2Hah6bDOhWJ6mEO7ILwpL1enk7QVfudQr5CTV7KU43md78i4gT7jjHEo7KDOlqwKds
+                vapidKey: "BK8WocQC93HpCQb9ysqai2Hah6bDOhWJ6mEO7ILwpL1enk7QVfudQr5CTV7KU43md78i4gT7jjHEo7KDOlqwKds"
 "
               }).then(token => {
                 console.log("FCM Token:", token);
@@ -201,5 +201,6 @@
   </script>
 </body>
 </html>
+
 
 
